# stack-scraper

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-app.yml
src/: config.py  initializer.py  main.py
src/apis/: question_no.py
src/constants/: api_constants.py  mock_data.py
src/db_wrappers/: db_models.py  in_memory_db.py
src/domain_models/: domain_enums.py  domain_models.py
src/external_sources/: external_source_base.py  scrapper_tasks.py
src/external_sources/scrappers/: stack_overflow.py
src/scripts/: run_api.py  run_api.sh
test/: conftest.py
test/src/: test_config.py  test_main.py
test/src/apis/: test_question_no.py
test/src/constants/: test_api_constants.py  test_mock_data.py
test/src/db_wrappers/: test_db_models.py  test_in_memory_db.py
test/src/domain_models/: test_domain_enums.py  test_domain_models.py
test/src/external_sources/: test_external_source_base.py  test_scrapper_tasks.py
test/src/external_sources/scrappers/: stack_overflow_page_bytes_content.py  test_stack_overflow.py
test/src/external_sources/scrappers/__snapshots__/: test_stack_overflow.ambr
