[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | venv
  | .env
)/
'''

[tool.isort]
profile = "black"
skip = ["migrations", ".env", "venv", ".local", ".history", ".vscode"]

[tool.poetry]
name = "stack-scraper"
version = "0.1.0"
description = "Sample repository showcasing how to write impeccably clean code that will save your sanity."
authors = ["Ashutosh <37182127+ashu-tosh-kumar@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
repository = "https://github.com/ashu-tosh-kumar/stack-scraper"

[tool.poetry.dependencies]
python = "^3.11.0"
beautifulsoup4 = "^4.12.3"
flask = "^3.0.3"
pydantic = "^2.8.2"
requests = "^2.32.3"
syrupy = "^4.6.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
